2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* main.c: Remove the global evolution_directory variable.
	(main): Just declare, assign and free the evolution_directory
	variable here.  Also, use g_idle_add() instead of gtk_idle_add().
	(idle_cb): Don't pass the evolution directory path to
	e_shell_new() anymore, since that arg is gone.

	* e-shell.c: Remove member local_directory from EShellPrivate.
	(impl_finalize): Don't free.
	(e_shell_init): Don't NULL.
	(e_shell_construct): Removed arg local_directory.
	(e_shell_new): Likewise.
	(e_shell_construct): Don't call e_setup_check_config() here.
	(e_shell_get_local_directory): Removed.

2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* main.c: Removed global variable "no_splash".
	(idle_cb): Updated to not pass the splash argument to
	e_shell_new().
	(main): Removed "--no-splash" option.

	* e-shell.c: Removed members storage_set, local_storage,
	summary_storage, folder_type_registry, component_registry,
	corba_storage_registry from struct EShellPrivate.
	(setup_corba_storages): Removed.
	(e_shell_construct): Don't invoke.
	(setup_local_storage): Removed.
	(e_shell_construct): Don't invoke.  Also, removed initialization
	for all the removed members.
	(e_shell_new): No priv->storage_set anymore.
	(e_shell_get_storage_set): Removed.
	(e_shell_get_local_storage): Removed.
	(e_shell_get_folder_type_registry): Removed.
	(set_owner_on_components): Removed.
	(set_interactive): Removed contents; do nothing for now.
	(pop_up_activation_error_dialog): Removed.
	(e_shell_construct): Removed arg show_splash.  Do not create a
	splash dialog at all.
	(e_shell_new): Removed arg show_splash here as well.
	(e_shell_construct): No folder type registry handling here
	anymore.
	(setup_components): Removed splash arg.
	(save_settings_for_components): Removed.
	(save_settings_for_component): Removed.
	(save_misc_settings): Removed.
	(e_shell_save_settings): Moved the code in here.
	(e_shell_component_maybe_crashed): Removed.